@@ -12,6 +12,20 @@ describe PG do
 		expect( PG.library_version ).to be >= 90100
 	end
 
+	it "can select which of both security libraries to initialize" do
+		# This setting does nothing here, because there is already a connection
+		# to the server, at this point in time.
+		PG.init_openssl(false, true)
+		PG.init_openssl(1, 0)
+	end
+
+	it "can select whether security libraries to initialize" do
+		# This setting does nothing here, because there is already a connection
+		# to the server, at this point in time.
+		PG.init_ssl(false)
+		PG.init_ssl(1)
+	end
+
 
 	it "knows whether or not the library is threadsafe" do
 		expect( PG ).to be_threadsafe()
